fixed text align bug

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -18,7 +18,8 @@
   margin: 5% 0 0 2%;
 }
 
-#article-photo {
+#article-photo {  
+  text-align: center;
   z-index: 2;
   background-color: #797e87;
   margin: 5% 5% 5% 5%;
